# opencrate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile:test  Makefile  Makefile.ci  PYTHON_VERSIONS  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: dockerfile.py  utils.py
.docker/cli/atuin/: config.toml
.docker/cli/fastfetch/: fastfetch.jsonc
.docker/cli/zsh/: .aliases.sh  .p10k.zsh  .zshrc
.docker/dockerfiles/: Dockerfile.base-cpu  Dockerfile.base-cuda  Dockerfile.cpu-py3.10  Dockerfile.cpu-py3.11  Dockerfile.cpu-py3.12  Dockerfile.cpu-py3.7  Dockerfile.cpu-py3.8  Dockerfile.cpu-py3.9  Dockerfile.cuda-py3.10  Dockerfile.cuda-py3.11  Dockerfile.cuda-py3.13  Dockerfile.cuda-py3.7  Dockerfile.cuda-py3.8  Dockerfile.cuda-py3.9  Dockerfile:base  Dockerfile:base-cpu  Dockerfile:base-cuda  Dockerfile:cpu-py3.10  Dockerfile:cpu-py3.10-min  Dockerfile:cpu-py3.11  Dockerfile:cpu-py3.11-min  Dockerfile:cpu-py3.12  Dockerfile:cpu-py3.12-min  Dockerfile:cpu-py3.13  Dockerfile:cpu-py3.13-min  Dockerfile:cpu-py3.7  Dockerfile:cpu-py3.7-min  Dockerfile:cpu-py3.8  Dockerfile:cpu-py3.8-min  Dockerfile:cpu-py3.9  Dockerfile:cpu-py3.9-min  Dockerfile:cuda-py3.10  Dockerfile:cuda-py3.10-min  Dockerfile:cuda-py3.11  Dockerfile:cuda-py3.11-min  Dockerfile:cuda-py3.12  Dockerfile:cuda-py3.12-min  Dockerfile:cuda-py3.13  Dockerfile:cuda-py3.13-min  Dockerfile:cuda-py3.7  (+19 more)
.docker/hooks/: container-first-startup.sh
.docker/requirements/: requirements-pytorch-cpu.txt  requirements-pytorch-cuda.txt
.github/: CODEOWNERS  CONTRIBUTING.md
.github/instructions/: development.instructions.md
.github/workflows/: build-and-push-docker.yml  build-test-and-push-docker-registry.md  build-test-and-push-docker-registry.yml  check-pr.yml  code-quality-and-unit-testing.yml  deploy-docs.yml  docker-build-test-and-push.md  docker-build-test-and-push.yml  pr-checks.yml  release-docker.yml  release-mkdocs.yml  release-pypi.yml  unit-testing-docker.yml
docker/: dockerfile.py  utils.py
docker/cli/btop/: btop.conf
docker/cli/zsh/: .aliases.sh  .p10k.zsh
docker/dockerfiles/: Dockerfile.base-cpu  Dockerfile.base-cuda  Dockerfile.cpu-py3.10  Dockerfile.cpu-py3.11  Dockerfile.cpu-py3.12  Dockerfile.cpu-py3.13  Dockerfile.cpu-py3.14  Dockerfile.cpu-py3.7  Dockerfile.cpu-py3.8  Dockerfile.cpu-py3.9  Dockerfile.cuda-py3.10  Dockerfile.cuda-py3.11  Dockerfile.cuda-py3.12  Dockerfile.cuda-py3.13  Dockerfile.cuda-py3.14  Dockerfile.cuda-py3.7  Dockerfile.cuda-py3.8  Dockerfile.cuda-py3.9
docker/requirements/: requirements-pytorch-cpu.txt  requirements-pytorch-cuda.txt  requirements-tensorflow-cpu.txt  requirements-tensorflow-cuda.txt
docs/: README.md  index.md
docs/api/: decorate.md  io.md  visualize.md
docs/contribution/: CONTRIBUTION.md  README.md
docs/css/: custom.css
docs/guides/: 1_artifacts_logging_reproducible_workflows.ipynb  1_artifacts_logging_reproducible_workflows_.ipynb
docs/reference/: concurrency.md  core.md  opencrate.md  snapshot.md
src/opencrate/: __init__.py
src/opencrate/cli/: app.py  auth.py  del.py  environment.py  host_access.py  init.py  main.py  settings.py  utils.py  workflow.py
src/opencrate/cli/bash/: git_init.sh  git_new.sh
src/opencrate/cli/requirements/: requirements-min-pytorch.txt  requirements-min-tensorflow.txt  requirements-pytorch.txt  requirements-tensorflow.txt
src/opencrate/cli/template/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
src/opencrate/cli/template/.devcontainer/: devcontainer.json  docker-compose.yml
src/opencrate/cli/template/.opencrate/: config.json
src/opencrate/core/: __init__.py  configuration.py  opencrate.py  snapshot.py
src/opencrate/core/utils/: __init__.py  concurrency.py  decorate.py  io.py  progress.py  visualize.py
src/opencrate/core/utils/io/: __init__.py  audio.py  checkpoint.py  csv.py  gif.py  image.py  json.py  system.py  text.py  video.py  yaml.py
tests/assets/: config.json
tests/test_core/: test_snapshot.py
tests/test_core/test_utils/: test_concurrency.py  test_decorate.py  test_io.py
tests/tests_utils/: test_concurrency.py  test_decorate.py  test_io.py
