[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 112
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312', 'py313']
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.docker
    | \.history
    | \.vscode
    | \.pytest_cache
    | \.idea
    | build
    | dist
    | __pycache__
)/
'''