[metadata]
name = opencrate
description = Democratizing AI by simplifing DX for everyone
author = Rishik C. Mourya
author_email = braindotai@gmail.ai
version = 0.1.0
license = MIT
license_files = LICENCE
platform = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages =
    opencrate
install_requires = 
    pydantic_settings
    prompt-toolkit
    questionary
    ipywidgets
    matplotlib
    numpy
    opencv-python-headless
    rich
    typer
    loguru
    docker
    jinja2
    imageio
    requests
    pyyaml
    lovelyplots

python_requires = >=3.5
package_dir =
    = src
zip_safe = no

[options.entry_points]
console_scripts =
    oc=opencrate.cli.main:app

[options.extras_require]
dev =
    tox
    mypy
    ruff
    pytest
    pytest-cov
    types-requests
    types-PyYAML
    torch

[mypy]
exclude = .git, __pycache__, build, dist, .mypy_cache, .tox, .venv
warn_return_any = False
warn_unused_configs = True
ignore_missing_imports = True
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_calls = False
disallow_untyped_defs = False
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
no_implicit_reexport = False

[tool:pytest]
addopts = --verbose --cov=opencrate --cov-report=term-missing --color=yes -vv
testpaths = tests