[metadata]
name = opencrate
description = Democratizing AI by simplifing DX for everyone
author = Rishik C. Mourya
author_email = braindotai@gmail.ai
version = 0.1.0
license = MIT
license_files = LICENCE
platform = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages =
    opencrate
install_requires = 
    pydantic_settings
    prompt-toolkit
    questionary
    ipywidgets
    matplotlib
    pandas
    numpy
    opencv-python-headless
    rich
    typer
    loguru
    docker
    jinja2
    imageio
    requests
    nvidia-ml-py
    lovelyplots
    tqdm
    pynvml
    pyinstrument
    memory_profiler

python_requires = >=3.5
package_dir =
    = src
zip_safe = no

[options.entry_points]
console_scripts =
    oc=opencrate.cli.main:app

[options.extras_require]
dev =
    ruff
    mypy
    pytest
    pytest-cov
    pytest-random-order
    tox
    torch
    torchvision
    soundfile
    av
    types-requests
    types-PyYAML
    types-docker
    mkdocs
    mkdocs-material
    mkdocstrings-python
    mkdocs-jupyter
    pre-commit
    fastapi
    uvicorn
    python_daemon
    aiofiles