[metadata]
name = opencrate
description = Democratizing AI by simplifing DX for everyone
author = Rishik C. Mourya
author_email = braindotai@gmail.com
version = 0.1.0rc2
license = MIT
license_files = LICENCE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = docker, ai, machine-learning, deep-learning, pytorch, deployment, developer-tools, cli, productivity
project_urls =
    Homepage = https://opencrateai.github.io/opencrate/
    Documentation = https://opencrateai.github.io/opencrate/reference/opencrate/
    Repository = https://github.com/OpenCrateAI/opencrate
    Issues = https://github.com/OpenCrateAI/opencrate/issues
    Changelog = https://github.com/OpenCrateAI/opencrate/releases
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages =
    opencrate
install_requires = 
    pydantic_settings
    prompt-toolkit
    questionary
    ipywidgets
    matplotlib
    pandas
    numpy
    opencv-python-headless
    rich
    typer
    loguru
    docker
    jinja2
    imageio
    requests
    nvidia-ml-py
    lovelyplots
    tqdm
    pyinstrument
    memory_profiler

python_requires = >=3.5
package_dir =
    = src
zip_safe = no

[options.entry_points]
console_scripts =
    oc=opencrate.cli.main:app

[options.extras_require]
dev =
    ruff
    mypy
    pytest
    pytest-cov
    pytest-random-order
    pytest-sugar
    tox
    torch
    torchvision
    soundfile
    av
    types-requests
    types-PyYAML
    types-docker
    mkdocs
    mkdocs-material
    mkdocstrings-python
    mkdocs-jupyter
    pre-commit
    fastapi
    uvicorn
    python_daemon
    aiofiles